# school-scheduler-engine

./: .gitignore  CMakeLists.txt  README.md
.backup/1/: CMakeLists.txt  Makefile  classes.h  optparser.c  utils.h
.backup/1/.svn/: wc.db
.backup/1/engine12/: engine.h
.backup/1/engine13/: ENGINE.PAS  engine.h
.backup/2/: cmake_install.cmake  emploi-lib.cpp  emploi-lib.h
.backup/2/engine12/: engine.cpp
.backup/2/engine13/: engine.cpp
.backup/old/: I_engine.h  emploi-lib.cpp  solution.h
.backup/old/Console/: ConsoleColor.h  console.h
.backup/old/engine10/: engine10.cpp  engine10.h
.backup/old/engine11/: engine11.cpp  engine11.h
.backup/old/engine12/: engine (2).cpp  engine (2).h
.backup/old/engine13/: engine (2).cpp  engine (2).h
app/: Tests.cpp  main-no-lib.cpp  main.cpp
engine/: I_engine.h  cfilestream.cpp  cfilestream.h  classes.h  dllmain.cpp  dllmain.h  engine.cpp  engine.h  solution.cpp  solution.h
